# cloud-platform

./: .gitignore  Makefile  api文档.md  开发文档.md
backend/: requirements.txt
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/core/: __init__.py  auth.py  exceptions.py  middleware.py  security.py
backend/app/models/: __init__.py  analysis.py  file.py  folder.py  recycle.py  user.py
backend/app/schemas/: __init__.py  analysis.py  file.py  folder.py  recycle.py  response.py  user.py
backend/app/services/: __init__.py  admin_service.py  analysis_service.py  file_service.py  folder_service.py  monitor_service.py  recycle_service.py  user_service.py
backend/app/tasks/: __init__.py  clean_recycle.py  scheduler.py  spark_analysis.py
backend/app/utils/: __init__.py  es_client.py  file_utils.py  log_utils.py  md5_utils.py  minio_client.py  redis_client.py
cpp-module/: CMakeLists.txt  Dockerfile  Makefile
cpp-module/src/: bindings.cpp  file_processor.cpp  file_processor.h  md5_calculator.cpp  md5_calculator.h  resource_monitor.cpp  resource_monitor.h
deploy/docker/: .env.production  docker-compose.prod.yml  docker-compose.yml
deploy/docker/elasticsearch/: mappings.json
deploy/docker/mysql/: init.sql
deploy/scripts/: backup.sh  deploy_huawei_cloud.sh  install.sh  start.sh  stop.sh
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/api/: admin.js  file.js  (+6 more)
spark-jobs/: Dockerfile  requirements.txt
spark-jobs/config/: spark_config.py
spark-jobs/jobs/: file_statistics.py  hot_files.py  user_behavior.py
(+33 files in other folders)
